--- a/Templates/Admin/topo.html.twig
+++ b/Templates/Admin/topo.html.twig
@@ -1,5 +1,8 @@
 <header>
     <div class="header-left">
+        <button type="button" id="mobile-menu-button">
+            <i class="bi bi-list"></i>
+        </button>
         <span style="margin-right: 10px">
             <i class="bi bi-boxes"></i>
         </span>
@@ -8,7 +11,7 @@
         </span>
     </div>
 
-    <div class="header-right">
+    <div class="header-right mobile-hidden" id="mobile-hidden-menu">
         <div>
             <span>
                 <i class="bi bi-laptop"></i>
