--- a/Templates/Admin/dashboard.html.twig
+++ b/Templates/Admin/dashboard.html.twig
@@ -1,19 +1,18 @@
 {% extends "base.html.twig" %}
 {% block conteudo %}
 
-
-    {{ flash() }}
-
     <div class="dashboard-head">
         <h1>Produtos</h1>
         <form method="post" class="search-box" action="{{ url('/admin/dashboard') }}">
-            <i class="bi bi-search"></i>
+            <button type="submit"><i class="bi bi-search"></i></button>
             <input type="text" name="filtro" placeholder="Buscar por nome...">
         </form>
         <a href="{{ url('/admin/novo') }}" class="btn-add">
             <i style="margin-right: 10px" class="bi bi-plus-lg"></i> Adicionar Produto
         </a>
     </div>
+
+    {{ flash() }}
 
     <div class="dashboard-table">
         <table>
@@ -33,7 +32,7 @@
                     <td>R$ {{ (produto.preco/100)|number_format(2, ',', '.') }}</td>
                     <td class="acoes">
                         <a href="{{ url('/admin/editar/' ~ produto.id) }}" class="btn-edit"><i class="bi bi-pencil"></i> Editar</a>
-                        <a href="{{ url('/admin/confirmar_deletar/' ~ produto.id) }}" class="btn-delete" onclick="return confirm('Excluir?')"><i class="bi bi-trash"></i> Excluir</a>
+                        <a href="{{ url('/admin/confirmar_deletar/' ~ produto.id) }}" class="btn-delete"><i class="bi bi-trash"></i> Excluir</a>
                     </td>
                 </tr>
             {% else %}
