melhorada a formatacao do preco no front-end

--- a/Templates/Admin/confirmar_deletar.html.twig
+++ b/Templates/Admin/confirmar_deletar.html.twig
@@ -42,7 +42,7 @@
             </div>
             <div class="atributo">
                 <span>Preço</span>
-                <span>{{ (preco/100)|number_format(2, ',', '.') }}</span>
+                <span>{{ formatarMonetario(preco/100) }}</span>
             </div>
             <div class="alerta">
                 <i class="bi bi-exclamation-triangle"></i> Açao permanente
